[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "ab-telegram-bot==1.0.1",
    "bot4==0.0.7",
    "pytelegrambotapi==4.23.0",
    "requests>=2.32.3",
    "telegram-bot8==0.2.6",
    "telegram-bot==0.1",
    "telegram>=0.0.1",
    "yfinance",
]
